# nanobanana_backend

./: .env.dev  .gitignore  Dockerfile  README.md  db.py  docker-compose.yml  main.py  models.py  nanobanana_client.py  rate_limit.py  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
core/: auth.py  config.py  logger.py  middleware.py  services.py
infra/: docker-compose.yml
infra/nginx/: nginx.conf
infra/postgres/init/: create-dbs.sh
nginx/: nginx.conf
scripts/: down.sh  up.sh
services/ai/: alembic.ini  pyproject.toml
services/ai/alembic/: env.py
services/ai/app/: main.py
services/ai/app/api/v1/: callbacks.py  chats.py  router.py  tasks.py
services/ai/app/clients/: nanobanana_client.py
services/ai/app/core/: config.py  logger.py  rate_limit.py
services/ai/app/models/: chat.py  message.py  task.py
services/ai/app/schemas/: task.py
services/ai/app/services/: uploads.py
services/auth/: alembic.ini  pyproject.toml
services/auth/alembic/: env.py
services/auth/app/: main.py
services/auth/app/core/: logger.py
services/auth/app/database/: base.py  session.py
services/billing/: Dockerfile  pyproject.toml
services/billing/app/: main.py
services/billing/app/core/: logger.py
