[tool.poetry]
name = "nanobanana-billing"
version = "0.1.0"
description = "NanoBanana Billing microservice"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {version = "^0.40.0", extras = ["standard"]}
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
sqlalchemy = {version = "^2.0.45", extras = ["asyncio"]}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
redis = "^5.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
ruff = "^0.7.0"

[tool.ruff]
line-length = 110
target-version = "py312"
